# full-stack-dev

./: README.md
mvp-project/: .gitignore  README.md
mvp-project/backend/: app.py  models.py  pyproject.toml
mvp-project/backend/alembic/versions/: 446cfd3e9c8e_remove_relation.py  79c464f841fb_initial_migration.py  7dedb150a36a_remove_relation.py  7dff1090fe2f_remove_relation.py  990392a3d0dd_second_migration.py  e898574eac6d_creation_sport_model.py
mvp-project/backend/lesson-8/: main.py
mvp-project/backend/lesson-9-auth/: app.py
mvp-project/backend/lesson-9-auth/mongodb/: app.py
mvp-project/db/: alembic.ini  models.py  pyproject.toml
mvp-project/db/alembic/versions/: 7cf77ea53bd7_initial_migration.py
mvp-project/frontend/: index.html
mvp-project/frontend/lesson-10/: README.md  package-lock.json  package.json
mvp-project/frontend/lesson-10-astro/lesson-10-astro/: package-lock.json  package.json
mvp-project/frontend/lesson-10-astro/lesson-10-astro/src/components/: Welcome.astro
mvp-project/frontend/lesson-10-c/lesson-10-vite/: .gitignore  package-lock.json  package.json
mvp-project/frontend/lesson-10-c/lesson-10-vite/src/: App.jsx
mvp-project/frontend/lesson-10/src/: index.html  output.css
mvp-project/frontend/lesson-11-form-submission/lesson-11-astro/: package-lock.json  package.json
mvp-project/frontend/lesson-11-form-submission/lesson-11-astro/src/components/: Form.astro
mvp-project/frontend/lesson-11-form-submission/lesson-11-astro/src/pages/: contact.astro
(+1 files in other folders)
